# llm-finance-framework

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  dev.bat  generate_report.py  pyproject.toml  requirements.txt  temp_test.csv  test_minimal.csv
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  research_question.md
.github/workflows/: ci.yml
data/raw/: sp500.csv
docs/: COLLABORATION_GUIDE.md  STRATEGIC_JOURNAL_FEATURE.md  configuration.md  experiment_design.md  methodology.md
example_results/analysis/: dummy_model_memory_feeling_baseline_comparison.csv  dummy_model_memory_feeling_calibration_analysis.md  dummy_model_memory_feeling_pattern_analysis.md  dummy_model_memory_feeling_statistical_validation.json
example_results/parsed/: dummy_model_memory_feeling_parsed.csv
example_results/reports/: dummy_model_memory_feeling_comprehensive_report.html  dummy_model_memory_feeling_comprehensive_report.md
scripts/: collaborate.py  dev-workflow.py  generate_report.py  validate_core_math.py  validate_indicators.py  version.py
src/: backtest.py  baseline_runner.py  baselines.py  config.py  config_classes.py  config_compat.py  configuration_manager.py  data_prep.py  decision_analysis.py  dummy_model.py  journal_manager.py  main.py  memory_classes.py  memory_manager.py  openrouter_model.py  performance_tracker.py  period_manager.py  prompt_builder.py  prompts.py  report_generator.py  reporting.py  statistical_validation.py  trade_history_manager.py  trading_engine.py  trading_engine_backup.py  trading_engine_clean.py
tests/: TEST_DOCUMENTATION.md  test_calibration.py  test_config_consistency.py  test_configuration.py  test_indicators.py  test_integration.py  test_journal_manager.py  test_memory_system.py  test_performance_tracker.py  test_strategic_journal_config.py  test_trade_history_manager.py
